added currentOp to machine, and composite key to Operation

--- a/frontend/src/app/job/job-show/job-show.component.html
+++ b/frontend/src/app/job/job-show/job-show.component.html
@@ -25,7 +25,7 @@
         <br><br>
       </div>
       <div class="grid2">
-          <button class='btn btn-primary' routerLink="edit/{{job.id}}">Edit Job</button>
+          <button class='btn btn-primary' routerLink="edit/{{job.jobNumber}}">Edit Job</button>
           <button class='btn btn-danger' (click)="onDelete(job.jobNumber, job.id)">Delete Job</button>
       </div>
     </div>
