--- a/frontend/src/app/machine/machine-edit/machine-edit.component.html
+++ b/frontend/src/app/machine/machine-edit/machine-edit.component.html
@@ -9,8 +9,28 @@
         formControlName='currentJob'
         type="text" 
         id="currentJob" 
+        class="form-control"
+        (change)="changeOps($event.target.value)">
+        <option 
+          *ngFor = "let job of jobs; let i = index" 
+          [selected]="job === machine.jobNumber"
+          [value]="i"
+          >
+            {{job}}
+          </option>
+      </select>     
+      <label for="currentOp">Op</label>
+      <select
+        formControlName='currentOp'
+        type="text" 
+        id="currentOp" 
         class="form-control">
-        <option *ngFor = "let job of jobs">{{job}}</option>
+        <option 
+          *ngFor = "let op of ops; trackBy: changeOps"
+          [selected]="op === machine.opNumber"
+          >
+            {{op}}
+          </option>
       </select>        
     </div>
       <br><br>
