--- a/frontend/src/app/machine/machine-new/machine-new.component.html
+++ b/frontend/src/app/machine/machine-new/machine-new.component.html
@@ -16,8 +16,9 @@
         formControlName='currentJob'
         type="text" 
         id="currentJob" 
-        class="form-control">
-        <option *ngFor = "let job of jobs">{{job}}</option>
+        class="form-control"
+        (change)="changeOps($event.target.value)">
+        <option *ngFor = "let job of jobs; let i = index" [value]="i">{{job}}</option>
       </select>     
       <label for="currentOp">Op</label>
       <select
@@ -25,7 +26,7 @@
         type="text" 
         id="currentOp" 
         class="form-control">
-        <option *ngFor = "let op of ops">{{op}}</option>
+        <option *ngFor = "let op of ops; trackBy: changeOps">{{op}}</option>
       </select>        
     </div>
       <br><br>
