--- a/frontend/src/app/machine/machine-show/machine-show.component.html
+++ b/frontend/src/app/machine/machine-show/machine-show.component.html
@@ -4,6 +4,8 @@
       <h3>{{machine.machine}}</h3>
       <h4 *ngIf="machine.currentJob">Current Job: {{machine.currentJob}}</h4>
       <h4 class="white-text" *ngIf="!machine.currentJob">0</h4>
+      <h4 *ngIf="machine.currentOp">Current Operation: {{machine.currentOp}}</h4>
+      <h4 class="white-text" *ngIf="!machine.currentOp">0</h4>
       <div class="grid2">
         <button class='btn btn-primary' routerLink="edit/{{machine.machine}}">Edit</button>
         <button class='btn btn-danger' (click)="onDelete(machine.machine)">Delete</button>
