nested operation component inside of job component

--- a/frontend/src/app/job/job-show/job-show.component.html
+++ b/frontend/src/app/job/job-show/job-show.component.html
@@ -28,6 +28,10 @@
           <button class='btn btn-primary' routerLink="edit/{{job.jobNumber}}">Edit Job</button>
           <button class='btn btn-danger' (click)="onDelete(job.jobNumber, job.id)">Delete Job</button>
       </div>
+      <div>
+        <h4> Operations </h4>
+        <app-job-ops [operation]="'job='+job.jobNumber"></app-job-ops>
+      </div>
     </div>
     <br>
   </div>
