--- a/frontend/src/app/job/job-show/job-show.component.html
+++ b/frontend/src/app/job/job-show/job-show.component.html
@@ -1,38 +1,5 @@
 <div class='grid' >
   <div *ngFor="let job of jobs"> 
-    <div class="border">
-      <div class="grid2">
-        <button *ngIf="!job.possibleQuantity" class='btn btn-primary' routerLink="calculator/job/{{job.jobNumber}}">Length Calc</button>
-        <button *ngIf="job.possibleQuantity" class='btn btn-info' routerLink="calculator/{{job.jobNumber}}">Remaining Bars</button>
-        <button *ngIf="!job.weightQuantity" class='btn btn-success' routerLink="calculator/weight/{{job.jobNumber}}">Weight Calc</button>
-      </div>
-      <div routerLink="{{job.jobNumber}}">
-        <br>
-        <h3>{{job.jobNumber}}</h3>
-        <h4>Current Job: <br> {{job.jobNumber}}</h4>
-        <h4 *ngIf="!job.possibleQuantity && !job.weightQuantity && job.orderQuantity">
-          Possible Quantity: {{job.orderQuantity}}
-        </h4>
-        <h4 *ngIf="!job.possibleQuantity && job.weightQuantity">
-          Possible Quantity: {{job.weightQuantity}}
-        </h4>
-        <h4 *ngIf="job.possibleQuantity">
-          Possible Quantity: {{job.possibleQuantity}}
-        </h4>
-        <h4 *ngIf="job.remainingQuantity">
-          Remaining Quantity: {{job.remainingQuantity}}
-        </h4> 
-        <br><br>
-      </div>
-      <div class="grid2">
-          <button class='btn btn-primary' routerLink="edit/{{job.jobNumber}}">Edit Job</button>
-          <button class='btn btn-danger' (click)="onDelete(job.jobNumber, job.id)">Delete Job</button>
-      </div>
-      <div>
-        <h4> Operations </h4>
-        <app-job-ops [operation]="'job='+job.jobNumber"></app-job-ops>
-      </div>
-    </div>
-    <br>
+    <app-job-find-show [search]="job.jobNumber"> </app-job-find-show>
   </div>
 </div>
