--- a/frontend/src/app/job/job-edit/job-edit.component.html
+++ b/frontend/src/app/job/job-edit/job-edit.component.html
@@ -1,95 +1,80 @@
 <div *ngIf="!canInput">
   <h1>You must be logged in to add a job lot!</h1>
+</div>
+
+<form *ngIf="canInput && editJobForm" [formGroup]="editJobForm" (ngSubmit)='onSubmit()' >
+  <h4><strong>Job# {{jobNum}}, Part# {{job.partNum}}</strong></h4>
+  <div class="form-group">
+    <label for="orderQuantity">Order Quantity (Optional)</label>
+    <input 
+      formControlName='orderQuantity'
+      type="number" 
+      id="orderQuantity" 
+      class="form-control">
   </div>
-    <form *ngIf="canInput && editJobForm" [formGroup]="editJobForm" (ngSubmit)='onSubmit()' >
-      <div class="form-group">
-        <label for="jobNumber">Job#</label>
-        <input 
-          formControlName='jobNumber'
-          id="jobNumber" 
-          class="form-control"
-        >
-      </div>
-      <div *ngIf="machines" class="form-group">
-        <label for="partNum">Part#</label>
-        <select
-          formControlName='partNum'
-          id="partNum" 
-          class="form-control">
-          <option *ngFor = "let part of parts">{{part.partNumber}}</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="orderQuantity">Order Quantity (Optional)</label>
-        <input 
-          formControlName='orderQuantity'
-          type="number" 
-          id="orderQuantity" 
-          class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="weightRecieved">Weight Recieved (Optional)</label>
-        <input 
-          formControlName='weightRecieved'
-          type="number" 
-          id="weightRecieved" 
-          class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="oal">Overall Length of Job (Optional)</label>
-        <input 
-          formControlName='oal'
-          type="number" 
-          id="oal" 
-          class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="cutOff">Cut Off Size (Optional)</label>
-        <input 
-          formControlName='cutOff'
-          type="number" 
-          id="cutOff" 
-          class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="mainFacing">Amount Faced on Main Spindle (Optional)</label>
-        <input 
-          formControlName='mainFacing'
-          type="number" 
-          id="mainFacing" 
-          class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="subFacing">Amount Faced on Sub Spindle (Optional)</label>
-        <input 
-          formControlName='subFacing'
-          type="number" 
-          id="subFacing" 
-          class="form-control">
-      </div>
-      <br><br>
-      <div class="grid">
-        <button 
-          class="btn btn-success" 
-          type="submit"
-          [disabled]="!editJobForm.valid"
-        >
-          Update Job
-        </button>
-        <div></div>
-        <button 
-          type='button' 
-          class="btn btn-danger" 
-          (click)='onDelete()'
-        >
-          Delete
-        </button>
-        <div></div>
-        <button 
-          type='button' 
-          class='btn btn-danger pull-right' 
-          (click)='onCancel()'
-        >
-          Cancel
-        </button>
-      </div>
+  <div class="form-group">
+    <label for="weightRecieved">Weight Recieved (Optional)</label>
+    <input 
+      formControlName='weightRecieved'
+      type="number" 
+      id="weightRecieved" 
+      class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="oal">Overall Length of Job (Optional)</label>
+    <input 
+      formControlName='oal'
+      type="number" 
+      id="oal" 
+      class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="cutOff">Cut Off Size (Optional)</label>
+    <input 
+      formControlName='cutOff'
+      type="number" 
+      id="cutOff" 
+      class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="mainFacing">Amount Faced on Main Spindle (Optional)</label>
+    <input 
+      formControlName='mainFacing'
+      type="number" 
+      id="mainFacing" 
+      class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="subFacing">Amount Faced on Sub Spindle (Optional)</label>
+    <input 
+      formControlName='subFacing'
+      type="number" 
+      id="subFacing" 
+      class="form-control">
+  </div>
+  <br><br>
+  <div class="grid">
+    <button 
+      class="btn btn-success" 
+      type="submit"
+      [disabled]="!editJobForm.valid"
+    >
+      Update Job
+    </button>
+    <div></div>
+    <button 
+      type='button' 
+      class="btn btn-danger" 
+      (click)='onDelete()'
+    >
+      Delete
+    </button>
+    <div></div>
+    <button 
+      type='button' 
+      class='btn btn-danger pull-right' 
+      (click)='onCancel()'
+    >
+      Cancel
+    </button>
+  </div>
