--- a/frontend/src/app/job/job-find/job-find-show/job-find-show.component.css
+++ b/frontend/src/app/job/job-find/job-find-show/job-find-show.component.css
@@ -3,9 +3,15 @@
     grid-template-columns: 50% 50%;
 }
 
+.grid2 { 
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
 .border{
     border: solid;
 }
+
 .white-text{
     color: white;
 }
