--- a/frontend/src/app/job/job-ops/job-ops-show/job-ops-show.component.html
+++ b/frontend/src/app/job/job-ops/job-ops-show/job-ops-show.component.html
@@ -9,25 +9,25 @@
     </button>
     <div
         *ngIf="showForm"
-        class='btn btn-primary'
     >
-        <app-job-ops-new></app-job-ops-new>
+        <app-job-ops-new [jobNumber]="operations[0].jobNumber"></app-job-ops-new>
     </div>
   </div>
   <div class="grid">
     <div *ngFor="let operation of operations; let i=index"> 
-      <div routerLink="../{{operation.id}}" class="border">
+      <div *ngIf="!editOp[i]" class="border">
         <h3>Op #: {{operation.opNumber}}</h3>
         <h4 *ngIf="operation.machine">Machine: {{operation.machine}}</h4>
         <h4 *ngIf="operation.cycleTime">Cycle Time: {{operation.cycleTime}}</h4>
         <h4 *ngIf="operation.remainingQuantity">Remaining Quantity: {{operation.remainingQuantity}}</h4>
         <h4 *ngIf="operation.cycleTime"> Remaining Machine Hours: {{((operation.remainingQuantity*operation.cycleTime)/3600).toFixed(2)}}</h4>
         <div class="grid">
-          <button class='btn btn-primary' routerLink="/ops/edit/{{operation.opNumber}}&job={{operation.jobNumber}}">Edit Op</button>
-          <button class='btn btn-danger' (click)="onDelete(operation)">Delete Op</button>
+          <button class='btn btn-primary' (click)="opEdit(i)">Edit</button>
+          <button class='btn btn-danger' (click)="onDelete(operation)">Delete</button>
         </div>
       </div>
-      <div *ngIf="edit-op">
+      <div *ngIf="editOp[i]">
+        <app-job-ops-edit [search]="operation.opNumber + '&job=' + operation.jobNumber"> </app-job-ops-edit>
       </div>
     </div>
   </div>
