Removed unused job-ops parent component

--- a/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
+++ b/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
@@ -65,7 +65,7 @@
       </div>
       <div>
         <h4> Operations </h4>
-        <app-job-ops [operation]="'job='+job.jobNumber"></app-job-ops>
+        <app-job-ops-show [operation]="'job='+job.jobNumber"></app-job-ops-show>
       </div>
     </div>
   </div>
