--- a/frontend/src/app/job/job-ops/job-ops-new/job-ops-new.component.css
+++ b/frontend/src/app/job/job-ops/job-ops-new/job-ops-new.component.css
@@ -2,7 +2,8 @@ input.ng-invalid.ng-touched {
     border: 1px solid red;
 }
 
-h6{
-  text-align: center;
+h6 {
   font-weight: 400;
+  text-align: center;
+  line-height: 75%;
 }
