--- a/frontend/src/app/job/job-edit/job-edit.component.css
+++ b/frontend/src/app/job/job-edit/job-edit.component.css
@@ -1,6 +1,6 @@
 .grid { 
     display: grid;
-    grid-template-columns: 30% 10% 20% 20% 20%;
+    grid-template-columns: 50% 50%;
 }
 
 input.ng-invalid.ng-touched {
@@ -9,4 +9,10 @@ input.ng-invalid.ng-touched {
 
 h4{
     text-align: center;
+}
+
+h6 {
+    font-weight: 400;
+    text-align: center;
+    line-height: 75%;
 }
