--- a/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
@@ -2,6 +2,7 @@
     <div>
         <h5>Time: <br><strong>{{lot.time}}</strong><br>
         Job #: <br><strong>{{lot.jobNumber}}</strong><br>
+        Operation #: <br><strong>{{lot.opNumber}}</strong><br>
         Quantity: <br><strong>{{lot.quantity}}</strong>
         <div *ngIf="lot.counterQuantity">Counter: <br><strong>{{lot.counterQuantity}}</strong></div></h5>
         <div class="grid">
