--- a/frontend/src/app/machine/machine-edit/machine-edit.component.css
+++ b/frontend/src/app/machine/machine-edit/machine-edit.component.css
@@ -1,6 +1,6 @@
 .grid { 
     display: grid;
-    grid-template-columns: 30% 10% 20% 20% 20%;
+    grid-template-columns: 50% 50%;
 }
 
 input.ng-invalid.ng-touched {
