--- a/frontend/src/app/machine/machine-edit/machine-edit.component.html
+++ b/frontend/src/app/machine/machine-edit/machine-edit.component.html
@@ -1,9 +1,8 @@
 <div *ngIf="!canInput">
   <h1>You must be logged in to add a machine lot!</h1>
   </div>
-    <form *ngIf="canInput && editMachineForm" [formGroup]="editMachineForm" (ngSubmit)='onSubmit()' >
+    <form *ngIf="canInput && editMachineForm && ops" [formGroup]="editMachineForm" (ngSubmit)='onSubmit()' >
     <div class="form-group">
-      <h3> Machine: {{machName}}</h3>
       <label for="currentJob">Job</label>
       <select
         formControlName='currentJob'
@@ -12,12 +11,13 @@
         class="form-control"
         (change)="changeOps($event.target.value)">
         <option 
-          *ngFor = "let job of jobs; let i = index" 
-          [selected]="job === thisJob"
-          [ngValue]="job">
-            {{job.jobNumber}}
+          *ngFor = "let job of jobs" 
+          [selected]="job === machine.currentJob">
+            {{job}}
           </option>
       </select>     
+    </div>
+    <div class="form-group">
       <label for="currentOp">Op</label>
       <select
         formControlName='currentOp'
@@ -25,7 +25,7 @@
         id="currentOp" 
         class="form-control">
         <option 
-          *ngFor = "let op of ops; trackBy: changeOps"
+          *ngFor = "let op of ops"
           [selected]="op === machine.currentOp"
           >
             {{op}}
@@ -39,17 +39,8 @@
           type="submit"
           [disabled]="!editMachineForm.valid"
         >
-          Update Machine
+          Update
         </button>
-        <div></div>
-        <button 
-          type='button' 
-          class="btn btn-danger" 
-          (click)='onDelete()'
-        >
-          Delete
-        </button>
-        <div></div>
         <button 
           type='button' 
           class='btn btn-danger pull-right' 
