--- a/frontend/src/app/production/production-single/production-single.component.html
+++ b/frontend/src/app/production/production-single/production-single.component.html
@@ -1,4 +1,4 @@
-<ul class='list-group'>
+<ul class='list-group' *ngIf="production">
     <li *ngIf="production.inQuestion" class='inQuestion list-group-item'>
         <div *ngIf="production" >
             <h4>Date: {{production.date}}</h4>
